# DtsDecoder

./: .gitignore  CMakeLists.txt  DtsDecoder.cpp  DtsDecoder.h  DtsDecoder.sln  DtsDecoder.vcxproj  DtsDecoder.vcxproj.filters  Readme.md  Resource.rc  decoderLibrary.h  dllmain.cpp  dtsDecoder.def  globals.h  stdafx.h
ComLight/: comLightClient.h  comLightServer.h  hresult.h
ComLight/client/: CComPtr.hpp
ComLight/pal/: guiddef.h
ComLight/server/: Object.hpp  StaticObject.hpp  interfaceMap.h
ComLight/utils/: guid_parse.hpp
TestDecoder/: TestDecoder.vcxproj  TestDecoder.vcxproj.filters  doubleRound.cpp  main.cpp  stdafx.h
Utils/: ApplyVolume.hpp  ChannelsData.hpp  interleaveChannels.hpp  loadSamples.hpp  simdTypes-sse.hpp  sse.natvis  store3-sse.hpp
libdcadec/: bitstream.cpp  bitstream.h  common.h  compiler.h  core_decoder.cpp  core_decoder.h  core_huffman.h  core_tables.h  core_vectors.h  dca_context.cpp  dca_context.h  dca_frame.cpp  dca_frame.h  dmix_tables.cpp  dmix_tables.h  errorCodes.h  exss_parser.cpp  exss_parser.h  fir_fixed.h  fir_float.h  fixed_math.h  huffman.h  idct.h  idct_fixed.cpp  idct_float.cpp  interpolator.cpp  interpolator.h  interpolator_fixed.cpp  interpolator_float.cpp  lbr_bitstream.h  lbr_decoder.cpp  lbr_decoder.h  lbr_huffman.h  lbr_tables.h  memory.hpp  xll_decoder.cpp  xll_decoder.h  xll_tables.h
